--- a/templates/registration/password_change.html
+++ b/templates/registration/password_change.html
@@ -7,24 +7,24 @@
 
 {% block body %}
 <h3>{% trans "Change Password" %}</h3>
-<form method="POST">
+<form name="passwordform" method="POST">
 <table>
 {% for err in form.old_password.errors %}
-<tr><td colspan="2" class="err">{{ err }}</td><tr>
+<tr><td colspan="2" class="error fadein">{{ err }}</td><tr>
 {% endfor %}
 <tr>
     <td>{{ form.old_password.label_tag }}</td>
     <td>{{ form.old_password }}</td>
 </tr>
 {% for err in form.new_password1.errors %}
-<tr><td colspan="2" class="err">{{ err }}</td><tr>
+<tr><td colspan="2" class="error fadein">{{ err }}</td><tr>
 {% endfor %}
 <tr>
     <td>{{ form.new_password1.label_tag }}</td>
     <td>{{ form.new_password1 }}</td>
 </tr>
 {% for err in form.new_password2.errors %}
-<tr><td colspan="2" class="err">{{ err }}</td><tr>
+<tr><td colspan="2" class="error fadein">{{ err }}</td><tr>
 {% endfor %}
 <tr>
     <td>{{ form.new_password2.label_tag }}</td>
@@ -33,10 +33,12 @@
 </table>
 
 <script type="text/javascript">
-$('.err').fadeIn('slow');
+$('.fadein').fadeIn('slow');
 </script>
 
-<input type="submit" value="{% trans 'change' %}" />
+<div class="bubble button">
+  <h3><a href="javascript:document.passwordform.submit();">{% trans "change" %}</a></h3>
+</div>
 
 {% if next %}
 <input type="hidden" name="next" value="{{ next }}" />
