--- a/sprints/templates/sprints/base.html
+++ b/sprints/templates/sprints/base.html
@@ -10,6 +10,8 @@
 
     <script type="text/javascript" src="{{ MEDIA_URL }}ext/js/summary.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/sprint_detail.js" charset="utf-8"></script>
+
+    <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.sparkline.js" charset="utf-8"></script>
 {% endblock %}
 
 {% block title %}viewing sprint {{ sprint }}{% endblock %}
