Make enter submit the password change also

--- a/templates/registration/password_change.html
+++ b/templates/registration/password_change.html
@@ -34,6 +34,10 @@
 
 <script type="text/javascript">
 $('.fadein').fadeIn('slow');
+$('#id_new_password2').keyup(function(e) {
+    if (e.keyCode == 13)
+        document.passwordform.submit();
+});
 </script>
 
 <div class="bubble button">
