Update URL to point to github

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
 {% blocktrans %}
 Berserk is better than sliced bread.<br />
 Berserk is committed to sparkle motion.<br />
-Berserk is also <a href="http://gitorious.org/projects/berserk">free software</a>.
+Berserk is also <a href="http://github.com/btaylor/berserk">free software</a>.
 {% endblocktrans %}
                 </td>
                 <td id="pony-power">
