--- a/timeline/templates/timeline/timeline_index.html
+++ b/timeline/templates/timeline/timeline_index.html
@@ -6,13 +6,41 @@
 {% endblock %}
 
 {% block body %}
-<ul id="timeline-event-container">
+<ul id="timeline-event-container" data-start-after="{{ new_start_after }}">
 {% for e in events %}
-    <li class="timeline-event">
+    <li class="timeline-event" data-id="{{ e.pk }}">
         <p>{{ e.message }}</p>
-        <blockquote><small><em>{{ e.comment }}</em></small></blockquote>
+{% if e.comment %}
+        <p class="timeline-event-comment">{{ e.comment }}</p>
+{% endif %}
     </li>
 {% endfor %}
 </ul>
+{% endblock %}
 
+{% block extra_body %}
+<script type="text/javascript">
+// I've got 99 problems and a URL ain't one.
+var url = '{% url timeline_latest_events_json 99 %}';
+
+window.setInterval(function () {
+	start_after = $('#timeline-event-container').attr('data-start-after');
+	$.getJSON(url.replace('99', start_after), function (data) {
+		$.each(data.events, function (i, e) {
+			var li = $('<li>').addClass('timeline-event').attr('data-id', e.pk)
+			                  .append($('<p>').text(e.message));
+			if (e.comment != '')
+				li.append($('<p>').addClass('timeline-event-comment').text(e.comment));
+
+			li.hide();
+			$('#timeline-event-container').prepend(li);
+			li.fadeIn();
+		});
+
+		// Update the start-after for subsequent runs
+		$('#timeline-event-container').attr('data-start-after',
+		                                    data.new_start_after);
+	});
+}, 3000);
+</script>
 {% endblock %}
