--- a/timeline/templates/timeline/timeline_index.html
+++ b/timeline/templates/timeline/timeline_index.html
@@ -34,7 +34,7 @@ window.setInterval(function () {
 
 			li.hide();
 			$('#timeline-event-container').prepend(li);
-			li.fadeIn();
+			li.delay(i * 800).fadeIn(600);
 		});
 
 		// Update the start-after for subsequent runs
