Truncate comment in CSS, and display all on hover

--- a/site_media/berserk/css/screen.css
+++ b/site_media/berserk/css/screen.css
@@ -293,7 +293,18 @@ img a {
 }
 
 .timeline-event-comment {
+    height: 1.2em;
     color: #D2AF77;
     font-style: oblique;
     padding: 0.5em 0 0 1em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.timeline-event-comment:hover {
+    height: auto !important;
+    white-space: normal;
+    text-overflow: clip;
+    overflow: visible;
 }
