--- a/timeline/templates/timeline/timeline_index.html
+++ b/timeline/templates/timeline/timeline_index.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block body %}
-<ul id="timeline-event-container" data-start-after="{{ new_start_after }}">
+<ul id="timeline-event-container" data-start-after="{{ new_start_after }}"
+    data-earlier-than="{{ new_earlier_than }}">
 {% for e in events %}
     <li class="timeline-event" data-id="{{ e.pk }}">
         <p>{{ e.get_message_for_display|safe }}</p>
@@ -21,19 +22,58 @@
 {% block extra_body %}
 <script type="text/javascript">
 // I've got 99 problems and a URL ain't one.
-var url = '{% url timeline_latest_events_json 99 %}';
+var latest_events_url = '{% url timeline_latest_events_json 99 %}';
+var previous_events_url = '{% url timeline_previous_events_json 99 %}';
+
+function add_hidden_event (e, prepend) {
+	var li = $('<li>').addClass('timeline-event').attr('data-id', e.pk)
+			  .append($('<p>').html(e.message));
+	if (e.comment != '')
+		li.append($('<p>').addClass('timeline-event-comment').text(e.comment));
+
+	li.hide();
+	if (prepend) {
+		$('#timeline-event-container').prepend(li);
+	} else {
+		$('#timeline-event-container').append(li);
+	}
+	return li;
+}
+
+var fetchingMoreData = false;
+
+$(window).scroll(function () {
+	if (fetchingMoreData)
+		return;
+
+	var startFetching = $(document).height() - $(window).height()
+	                    - ($('#timeline-event-container').height() * 0.2);
+	if ($(window).scrollTop() < startFetching)
+		return;
+
+	var earlier_than = $('#timeline-event-container').attr('data-earlier-than');
+	if (earlier_than < 0)
+		return;
+
+	fetchingMoreData = true;
+	$.getJSON(previous_events_url.replace('99', earlier_than), function (data) {
+		$.each(data.events, function (i, e) {
+			var li = add_hidden_event(e, false);
+			li.slideDown();
+		});
+
+		// Update the earlier-than for subsequent runs
+		$('#timeline-event-container').attr('data-earlier-than',
+		                                    data.new_earlier_than);
+		fetchingMoreData = false;
+	});
+});
 
 window.setInterval(function () {
-	start_after = $('#timeline-event-container').attr('data-start-after');
-	$.getJSON(url.replace('99', start_after), function (data) {
+	var start_after = $('#timeline-event-container').attr('data-start-after');
+	$.getJSON(latest_events_url.replace('99', start_after), function (data) {
 		$.each(data.events, function (i, e) {
-			var li = $('<li>').addClass('timeline-event').attr('data-id', e.pk)
-			                  .append($('<p>').html(e.message));
-			if (e.comment != '')
-				li.append($('<p>').addClass('timeline-event-comment').text(e.comment));
-
-			li.hide();
-			$('#timeline-event-container').prepend(li);
+			var li = add_hidden_event(e, true);
 			li.delay(i * 800).slideDown();
 		});
 
