--- a/timeline/templates/timeline/timeline_index.html
+++ b/timeline/templates/timeline/timeline_index.html
@@ -1,6 +1,7 @@
 {% extends "timeline/base.html" %}
 
 {% load i18n %}
+{% load utcunixtimestamp %}
 
 {% block banner-container %}
 {% endblock %}
@@ -9,7 +10,8 @@
 <ul id="timeline-event-container" data-start-after="{{ new_start_after }}"
     data-earlier-than="{{ new_earlier_than }}">
 {% for e in events %}
-    <li class="timeline-event" data-id="{{ e.pk }}">
+    <li class="timeline-event" data-id="{{ e.pk }}" data-timestamp="{{ e.date|utcunixtimestamp }}">
+	<p class="timeline-date"></p>
         <p>{{ e.get_message_for_display|safe }}</p>
 {% if e.comment %}
         <p class="timeline-event-comment">{{ e.comment|linebreaksbr }}</p>
@@ -21,13 +23,43 @@
 
 {% block extra_body %}
 <script type="text/javascript">
+var MONTHS = [
+	'January', 'Feburary', 'March', 'April',
+ 	'May', 'June', 'July', 'August',
+	'September', 'October', 'November', 'December'
+];
+
 // I've got 99 problems and a URL ain't one.
 var latest_events_url = '{% url timeline_latest_events_json 99 %}';
 var previous_events_url = '{% url timeline_previous_events_json 99 %}';
 
+function get_relative_date_string (date) {
+	var curr = new Date().getTime() / 1000;
+	var diff = curr - date;
+
+	var mesg = '';
+	if (diff < 60) {
+		mesg = 'moments ago';
+	} else if (diff < 3600) {
+		mesg = Math.round(diff / 60) + ' minutes ago';
+	} else if (diff < 43200) {
+		mesg = Math.round(diff / 3600) + ' hours ago';
+	} else {
+		var dt = new Date(date * 1000);
+		if (dt.year == curr.year)
+			mesg = MONTHS[dt.month] + ' ' + dt.day;
+		else
+			mesg = MONTHS[dt.month] + ' ' + dt.day + ' ' + dt.getFullYear();
+	}
+	return mesg;
+}
+
 function add_hidden_event (e, prepend) {
 	var li = $('<li>').addClass('timeline-event').attr('data-id', e.pk)
-			  .append($('<p>').html(e.message));
+	                  .attr('data-timestamp', e.date)
+	                  .append($('<p>').addClass('timeline-date')
+	                                  .text(get_relative_date_string(e.date)))
+	                  .append($('<p>').html(e.message));
 	if (e.comment != '')
 		li.append($('<p>').addClass('timeline-event-comment').html(e.comment));
 
@@ -39,6 +71,17 @@ function add_hidden_event (e, prepend) {
 	}
 	return li;
 }
+
+function update_relative_times () {
+	$('.timeline-event').each(function () {
+		var date = $(this).attr('data-timestamp');
+		$(this).children('.timeline-date').first()
+		       .text(get_relative_date_string(date));
+	});
+}
+
+update_relative_times();
+window.setInterval(update_relative_times, 30000);
 
 var fetchingMoreData = false;
 
