Reword notification label

--- a/timeline/templates/timeline/index.html
+++ b/timeline/templates/timeline/index.html
@@ -15,7 +15,7 @@
     <div id="timeline-top-bar">
         <label for="notifications">
             <input id="timeline-notify-checkbox" type="checkbox" />
-            Notify me on update
+            Notify me when new items are added
         </label>
     </div>
     <ul id="timeline-event-container" data-start-after="{{ new_start_after }}"
