--- a/timeline/templates/timeline/index.html
+++ b/timeline/templates/timeline/index.html
@@ -5,6 +5,7 @@
 
 {% block extra_head %}
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.cookie.js" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/notifier.js" charset="utf-8"></script>
 {% endblock %}
 
 {% block banner-container %}
@@ -47,22 +48,15 @@ var latest_events_url = '{% url timeline_latest_events_json 99 %}';
 var previous_events_url = '{% url timeline_previous_events_json 99 %}';
 var event_popup_url = '{% url timeline_event_popup 99 %}';
 
-var notification_enabled = $.cookie('notification_enabled') == "true";
-$('#timeline-notify-checkbox').attr('checked', notification_enabled);
+var notifier = new Notifier({
+	cookie_name : 'timeline_notification_enabled',
+	enabledChanged : function (val) {
+		$('#timeline-notify-checkbox').attr('checked', val);
+	}
+});
 
 $('#timeline-notify-checkbox').change(function () {
-	var c = $(this);
-	var checked = c.attr('checked');
-	if (!notification_enabled && checked && window.webkitNotifications
-	    && window.webkitNotifications.checkPermission() > 0) {
-		window.webkitNotifications.requestPermission(function () {
-			notification_enabled =
-				window.webkitNotifications.checkPermission() == 0;
-			$.cookie('notification_enabled', notification_enabled);
-		});
-	}
-	$.cookie('notification_enabled', checked);
-	notification_enabled = checked;
+	notifier.toggleEnabled();
 });
 
 function get_relative_date_string (date) {
@@ -89,13 +83,11 @@ function get_relative_date_string (date) {
 }
 
 function add_hidden_event (e, prepend) {
-	if (prepend && notification_enabled) {
-		var popup = window.webkitNotifications.createHTMLNotification(
-			event_popup_url.replace('99', e.pk)
-		);
-		popup.show();
-
-		setTimeout(function () { popup.cancel(); }, 5000);
+	if (prepend) {
+		notifier.htmlNotify({
+			url : event_popup_url.replace('99', e.pk),
+			timeout : 8000
+		});
 	}
 
 	var li = $('<li>').addClass('timeline-event').attr('data-id', e.pk)
